Melhor tratamentos de logs

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -191,7 +191,7 @@
           </button>
           <button id="stop-backend-btn" class="status-bar-btn stop" disabled>
             <span class="btn-icon">🛑</span>
-            <span class="btn-text" data-translate-key="stopBackend">Abordar Missão</sspan>
+            <span class="btn-text" data-translate-key="stopBackend">Abortar Missão</span>
           </button>
           
           <!-- Barra de progresso para upload - posicionada abaixo dos botões -->
